# nyl

./: .envrc  .gitignore  README.md  nyl-secrets.yaml  pyproject.toml  test.py
.github/workflows/: build.yaml
assets/: nyl-pipeline-schema.afdesign
docs/: mkdocs.yml
docs/content/: index.md
docs/content/concepts/: applications.md  deployment.md  package.md
docs/content/configuration/: intro.md  profiles.md  projects.md  secrets.md
docs/content/configuration/api-reference/: profiles.md  secrets.md
docs/content/provisional/: index.md
docs/content/provisional/configuration/: package.md
docs/content/provisional/templating/: introduction.md  secrets.md
docs/content/resources/: bootstrap.md  comparison.md
docs/content/templating/resources/: HelmChart.md  Package.md
example/: nyl-profiles.yaml  nyl-secrets.yaml  secrets.yaml
example/manifests/: postgres.yaml
examples/hcloud-terraform-nix-helm/: nyl.pipeline.py
examples/hcloud-terraform-nix-helm/provision/: main.tf
examples/terraform-terraform/: nyl-pipeline.py
examples/terraform-terraform/mod1/: main.tf
examples/terraform-terraform/mod2/: main.tf
src/kubernetes/: README.md
src/kubernetes/dynamic/: __init__.pyi  client.pyi  discovery.pyi  exceptions.pyi  resource.pyi
src/kubernetes/watch/: __init__.pyi  watch.pyi
src/nyl/: __init__.py  cli.py  main.py  pipeline.py  tunnel.py  utils.py  var.py
src/nyl/appmanager/: __init__.py  appmanager.py  crd.py
src/nyl/commands/: __init__.py  conn.py  crds.py  new.py  profile.py  secrets.py  template.py  tun.py
src/nyl/configmanager/: configmanager.py  project.py  sopsfile.py
src/nyl/configmanager/sources/: helmchart.py  rawmanifests.py
src/nyl/contrib/: terraform.py
src/nyl/contrib/kubernetes/: __init__.py  apply_manifests.py  manifest_source.py
src/nyl/generator/: __init__.py  dispatch.py  dispatch_test.py  helmchart.py  statefulsecret.py
src/nyl/profiles/: __init__.py  config.py  connections.py  kubeconfig.py  profilemanager.py  tunnel.py  tunnelmanager.py
src/nyl/project/: config.py
src/nyl/resources/: __init__.py  applyset.py  applyset_test.py  helmchart.py  package.py  statefulsecret.py
src/nyl/secrets/: __init__.py  config.py  null.py  sops.py  sops_test.py
src/nyl/tools/: cli.py  fs.py  kubectl.py  kvstore.py  typer.py  types.py
