[project]
name = "nyl"
version = "0.0.0"
description = "Nyl facilitates the orchestration of infrastructure and application deployment pipelines across different tools, making them work together in a seamless manner."
authors = [{ name = "Niklas Rosenstein", email = "rosensteinniklas@gmail.com" }]
dependencies = [
    "typer>=0.12.3",
    "nr-proxy>=1.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
scripts = { "nyl" = "nyl.cli:app" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.2",
]

[tool.ruff]
line-length = 120
