[project]
name = "nyl"
version = "0.0.0"  # sed'ed on publish in CI
description = "Default template for PDM package"
authors = [
    {name = "Niklas Rosenstein", email = "rosensteinniklas@gmail.com"},
]
dependencies = [
    "bcrypt>=4.2.0",
    "databind>=4.5.2",
    "filelock>=3.15.4",
    "jinja2>=3.1.4",
    "kubernetes>=30.1.0",
    "loguru>=0.7.2",
    "nr-stream>=1.1.5",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "stablehash>=0.2.0",
    "structured-templates>=0.0.5,<0.1.0",
    "typer>=0.12.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
nyl = "nyl.commands:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint = "bash -c 'ruff format && ruff check --fix && mypy src' && pytest"

[tool.pdm.dev-dependencies]
dev = [
    "kubernetes-stubs>=22.6.0.post1",
    "mkdocs-material>=9.5.28",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.1",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "ruff>=0.4.8",
    "types-pyyaml>=6.0.12.20240311",
    "types-requests>=2.32.0.20240712",
]

[tool.ruff]
line-length = 120
